Fixed menu and body on mobile when menu is open

--- a/src/components/Navigation/navigation.css
+++ b/src/components/Navigation/navigation.css
@@ -32,7 +32,7 @@
   .navigation-container {
     width: 200px;
     height: 100%;
-    position: fixed;
+    position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
